# gmonitor

./: .gitignore  README.md
document/: INSTALL  Makefile  arqsyst.xml  clasaux.xml  cliente.xml  faq.xml  instman.xml  intro.xml  latin2acute.sh  manual-faq.xml  manual-inst.xml  manual-prog.xml  manual-syst.xml  manual.xml  message.txt  modcomu.xml  monitor.txt  monitordev.xml  progman.xml  protmsg.xml  ruteos.xml  server.xml  svrstio.xml  svrwait.xml  sysman.xml
document/diagramas/: 3capas.odg  gnu-monitor-diagram.odg  modo1.odg  modo2.odg  modo3.odg  modo4.odg  modo5.odg  ruteo-modo1.odg  ruteo-modo2.odg  ruteo-modo3.odg  ruteo-modo4.odg  ruteo-modo5.odg  servicios-interactivos.odg
document/images/: gnu-monitor-diagram.swf
samples/: server.cc  serverw.cc
samples/eco/cliente/: Makefile  classapp.cc
samples/info/cliente/: Makefile  classapp.cc  gminfo.cc
samples/statups/cliente/: Makefile  ups.cc  upsmon
samples/statups/server/: Makefile  statups.cc  wpower.cc
samples/statups/server/conf/: server.tab
samples/turnos/cliente/cajero/: LICENSE.TXT  Makefile  cajero.cc  classapp.cc
samples/turnos/cliente/turnero/: Makefile  classapp.cc  classapp.h
system/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  clean-old-system.sh  config.h.in  configure  configure.ac  configure.mk  fixeol.sh
system/autom4te.cache/: output.1  requests  traces.0  traces.1
system/client/: Makefile  Makefile.am  Makefile.in  gmc.cc  gmc.cc~  gmc.h  gmc.loT
system/files/: Makefile  Makefile.am  Makefile.in  dummy
system/files/script/: Makefile  Makefile.am  Makefile.in  clean-gmonitor-logs  clean-gmonitor-old-logs.sh  drop_ipc.sh  gmon_config  gmon_start  gmon_status  gmon_stop  gmond  gmonitor.service
system/files/sysconfig/: Makefile  Makefile.am  Makefile.in  gmonitor
system/files/tables/: Makefile  Makefile.am  Makefile.in  funcion.tab  funcion_parametro.tab  server.tab  server_parametro.tab
system/files/xinetd.d/: Makefile  gmonitor  install-listener.sh
system/listener/: Makefile  Makefile.am  Makefile.in  gmd.cc  install-listener.sh
system/monitor/: Makefile  monitor  monitor.cc  monitor.d
system/queue/: Makefile  Makefile.am  Makefile.in  gmq.cc  gms.cc  gms.h  gmsbase.cc  gmsbase.h  gmswaited.cc  gmswaited.h
system/router/: Makefile  Makefile.am  Makefile.in  gmt.cc
system/servers/: Makefile  Makefile.am  Makefile.in  update-tables.sh
system/servers/gm_config/: Makefile  Makefile.am  Makefile.in  README  gm_config.cc  gmconfig.cc  gmconfig.h
system/servers/gm_config/conf/: server.tab
system/servers/gm_default/: Makefile  Makefile.am  Makefile.in  README  gm_default.cc
system/servers/gm_default/conf/: server.tab
system/servers/gm_sbuffer/: Makefile  Makefile.am  Makefile.in  README  gm_sbuffer.cc  gmsbuffer.cc  gmsbuffer.h
system/servers/gm_sbuffer/conf/: server.tab
system/servers/gm_squeue/: Makefile  Makefile.am  Makefile.in  README  gm_squeue.cc  gmsaf.cc  gmsaf.h  gmsafile.cc  gmsafile.h  update-tables.sh
system/servers/gm_squeue/conf/: server.tab
system/servers/gm_timer/: Makefile  Makefile.am  Makefile.in  README  gm_timer.cc  gmtimer.cc  gmtimer.h  wtimer.cc  wtimer.h
system/servers/gm_timer/conf/: server.tab
system/servers/gm_transac/: Makefile  Makefile.am  Makefile.in  README  gm_transac.cc  gm_transac.cc~  transac.cc  transac.h  wtimer.cc  wtimer.h
system/servers/gm_transac/conf/: server.tab
system/shared/: Makefile  Makefile.am  Makefile.in  cmsg.cc  cmsg.h  ctcp.cc  ctcp.h  glog.cc  glog.h  gmbuffer.cc  gmbuffer.h  gmcomm.cc  gmcomm.h  gmconst.h  gmerror.cc  gmerror.h  gmessage.cc  gmessage.h  gmheader.cc  gmheader.h  gmidat.cc  gmidat.h  gmisc.cc  gmisc.h  gmontdb.cc  gmontdb.h  gmshared.h  gmstring.cc  gmstring.h  msgtype.h  shmem.cc  shmem.h  sincmem.cc  sincmem.h  sincro.cc  sincro.h  svcstru.h
system/systemd/: Makefile  gmonitor-start.sh  gmonitor-stop.sh  gmonitor.service
system/tools/: Makefile  Makefile.am  Makefile.in
system/tools/gm_des/: Makefile  des.c  desmat.h  gmcrypt  sec.c  sec.h
system/tools/gm_loglevel/: Makefile  Makefile.am  Makefile.in  classapp.cc  gm_loglevel.cc
system/tools/gm_safcfg/: Makefile  Makefile.am  Makefile.in  gm_safcfg.cc
system/tools/gm_viewcfg/: Makefile  Makefile.am  Makefile.in  gm_viewcfg.cc
